[gd_scene load_steps=4 format=2]

[ext_resource path="res://resource/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Splash.gd" type="Script" id=2]
[ext_resource path="res://resource/diamond_hands.png" type="Texture" id=3]

[node name="Splash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 470.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 470.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This application was built to pull SEC data filings from institutional holders.

To use this application you'll have to get an API key for the Edgar developer system. 

[url=https://developer.edgar-online.com/member/register]Please click here to do that[/url]. 

When ready, copy the API key you generated into the box below.

Made for the GME community in the [url=https://godotengine.org/license]Godot engine[/url]"
text = "This application was built to pull SEC data filings from institutional holders.

To use this application you'll have to get an API key for the Edgar developer system. 

Please click here to do that. 

When ready, copy the API key you generated into the box below.

Made for the GME community in the Godot engine"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 485.0
margin_right = 470.0
margin_bottom = 520.0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 358.0
margin_bottom = 35.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 470.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "GO"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 474.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
[connection signal="meta_clicked" from="MarginContainer/HBoxContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
